manifests/applications/dendrite/syncv3/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress
  name: syncv3
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
